--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,21 @@
-<style>
+style{
     img{
         width: 300px;
     } 
     h1{
         padding: 5px;
-        font-family: Arial, sans-serif;
+        font-family: Arial;
         font-size: 24px;
         color: white;
         background-color: red;
     }
-    author-name-and-date{
+    #author-name-and-date{
         font-family: Arial;
         font-size: 12px;
         color: lightgray;
     }
     p, ol{
-        font-family: "Times New Roman";
+        font-family: Arial;
         font-size: 16px;
         color: gray;
     }
@@ -24,4 +24,4 @@
         font-size: 12px;
         color: blue;
     }
-</style>
+}
