--- a/NewsArticle.css
+++ b/NewsArticle.css
@@ -1,4 +1,4 @@
-style{
+
     img{
         width: 300px;
     } 
@@ -15,7 +15,7 @@ style{
         color: lightgray;
     }
     p, ol{
-        font-family: Arial;
+        font-family: "times new roman";
         font-size: 16px;
         color: gray;
     }
@@ -24,4 +24,3 @@ style{
         font-size: 12px;
         color: blue;
     }
-}
